# AROS-mirror

./: .gitignore  .gitmodules  Jenkinsfile  README.md
contrib/AHI/: AHI-Startup  COPYING.DRIVERS  ChangeLog  CompilerSpecific.h  Makefile.in  README  README.ATO  README.TRANSLATIONS  TODO  config.h.in  config.sub  configure  configure.in  mmakefile.src  version.date
contrib/AHI/AHI/: C_c_noauto.sd  Makefile.in  ahi.c  ahi.h  ahiprefs.cd  ahiprefs.ct  ahiprefs_Cat.c  ahiprefs_Cat.h  gui.h  gui_bgui.c  gui_ca.c  gui_mui.c  support.c  support.h  version.date
contrib/AHI/AHI-Handler/: AHI-Handler.DICE  Makefile.in  main.c  main.h  smakefile  version.date
contrib/AHI/AddAudioModes/: AddAudioModes.c  Makefile.in  version.date
contrib/AHI/Device/: C_c_AHI.sd  C_h_AHI.sd  Makefile.in  addroutines.h  addroutines_32bit.c  addroutines_68k.s  addroutines_71.c  addroutines_hifi.c  addroutines_lofi.c  addroutines_ppc.s  addtest.c  ahi.cd  ahi.ct  ahi_def.h  ahi_def.i  asmfuncs.h  asmfuncs.s  audioctrl.c  audioctrl.h  database.c  database.h  debug.c  debug.h  devcommands.c  devcommands.h  device.c  device.h  devsupp.c  devsupp.h  devsupp.s  dsp.h  dsp.i  dspecho.c  dspecho.h  dspechofuncs.c  dspechofuncs.h  dspechofuncs_68k.s  effectinit.c  effectinit.h  elfloader.c  (+26 more)
contrib/AHI/Docs/: Makefile.in  ahidev.texinfo  ahiusr.texinfo  readme.changes  readme.dev  readme.main  readme.usr
contrib/AHI/Drivers/: MODE_ID  Makefile.in
contrib/AHI/Examples/: Makefile  Makefile.in
contrib/AHI/Include/: Makefile.in
contrib/AHI/Toccata/: libinit.c  slaveproc.c  smakefile  toccata.c  toccata.h
contrib/Games/lbreakout2/: .cvsignore  AUTHORS  ChangeLog  LBreakout2.prj  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  lbreakout2-2.6.5-aros.diff  lbreakout2.spec  mkinstalldirs  mmakefile  mmakefile.src
contrib/Games/spout/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  font.h  mmakefile.src  piece.c  piece.h  sintable.h  spout.c
contrib/apdf/: Makefile  Makefile.in  configure  configure.in
contrib/apdf/addons/: Apdf.config
contrib/apdf/apdf/: AComm.h  Apdf.h  Apdf.info  MakeConfig.c  Makefile.in  VpdfBase.c  VpdfBase.h  VpdfBase2.c  VpdfBase2PPC.c  VpdfBasePPC.c  apdf.c  apdf.cd  apdf.ct  apdf_msgs.h  client68k.c  clientmos.c  clientppc.c  comm.c  comm.h  config.h  docbitmap.c  docbitmap.h  docgroup.c  docgroup.h  doclens.c  doclens.h  docscroll.c  docscroll.h  document.c  document.h  docwindow.h  fontmap.c  fontmap.h  français.ct  gfxchunk.c  gfxchunk.h  io_client.h  io_server.c  io_server.h  mmakefile.src  (+15 more)
contrib/apdf/aros/: aconf.h
contrib/apdf/doc/: ATO.readme  Apdf.guide  Apdf.guide.info
contrib/apdf/fofi/: FoFiBase.cc  Makefile.in  mmakefile.src
contrib/apdf/freetype2/: Makefile.in
contrib/apdf/goo/: GString.cc  GString.h  Makefile.in  gdebug.cc  gdebug.h  gfile.cc  gfile.h  gmem.h  gmem2.cc  gmempp.cc  mmakefile.src
contrib/apdf/server/: AOutputDev.cc  AOutputDev.h  Apdfcommon.cc  FontOutputDev.cc  FontOutputDev.h  FreeType.cc  FreeType.h  Makefile.in  OutputFontCache.cc  OutputFontCache.h  TrueType.cc  TrueType.h  Type1.cc  Type1.h  Type3.cc  altivec.cc  end.c  gfx.cc  gfx.h  io_client_68k.cc  io_client_mos.cc  io_client_ppc.cc  lib68k.c  libppc.c  mmakefile.src  mystdio.cc  mystdio.h  path.cc  pixfmt.cc  rasterize.h  rasterize_16.cc  rasterize_24.cc  rasterize_32.cc  rasterize_8.cc  server.cc  server68k.cc  servermos.cc  serverppc.cc  startup.c  stub.cc  (+1 more)
contrib/apdf/xpdf/: AcroForm.cc  AcroForm.h  Action.cc  Action.h  Annot.h  Annotations.cc  Annotations.h  Array.cc  CMap.cc  Catalog.cc  Catalog.h  CharCodeToUnicode.cc  Dict.cc  Dict.h  Error.h  FDFForm.cc  FDFForm.h  FontCache.cc  FontCache.h  FontCache_2.cc  FontCache_2.h  FontEncoding.cc  FontEncoding.h  FontInfo.h  FontMap.cc  FontMap.h  Gfx.cc  Gfx.h  GfxFont.cc  GfxFont.h  GfxFont_2.cc  GfxFont_2.h  GfxState.cc  GfxState.h  GlobalParams.cc  GlobalParams.h  Hints.cc  Hints.h  ImageOutputDev.cc  ImageOutputDev.h  (+36 more)
contrib/gfx/XaoS/: ChangeLog  Makefile.in  README.AROS  TODO  build.bat  configure  configure.in  mk  mmakefile.src
contrib/gnu/ed/: ChangeLog  INSTALL  Makefile.in  NEWS  POSIX  README  THANKS  TODO  buf.c  config.h.in  configure  configure.in  ed-0.2-aros.diff  ed.1  ed.h  ed.info  ed.texinfo  error.c  glbl.c  io.c  main.c  mmakefile.src  re.c  regex.c  regex.h  signal.c  sub.c  texinfo.tex  undo.c
contrib/gnu/indent/: AUTHORS  ChangeLog  ChangeLog-1990  ChangeLog-1998  Makefile.am  Makefile.in  Makefile.mingw32  NEWS  README  README.VMS  README.vc++  aclocal.m4  args.c  args.h  backup.c  backup.h  comments.c  comments.h  config.h.in  config.h.vc++  config.h.vms  configure  configure.in  globs.c  globs.h  gnuc-make.com  gperf-cc.c  gperf.c  indent-2.2.9-aros.diff  indent-cc.gperf  indent.1  indent.c  indent.dsp  indent.gperf  indent.h  indent.html  indent.info  indent.mak  indent.texinfo  io.c  (+12 more)
contrib/regina/: .cvsignore  BUGS  INSTALL  Makefile.aix.in  Makefile.in  README.BeOS  README.DJG  README.EMX  README.OS2  README.Unix  README.VCP  README.W32  README.W64  Regina-2.2.spec  Regina-3.0.spec  Regina.spec  TODO  TODO.AROS  aclocal.m4  amifuncs.c  amigafuncs.c  amilib.h  arexxfuncs.c  aroscmd.c  arscmd.c  arxfuncs.c  builtin.c  client.c  cmath.c  cmsfuncs.c  config.h.in  configur.h  configure  configure.in  convert.c  dbgfuncs.c  de.mts  debug.c  defs.h  descrip.mms  (+138 more)
contrib/regina/arexx_test/: addsupport.rexx  ados.rexx  forbid1.rexx  forbid2.rexx  ptrarith.rexx  typepkt.rexx
contrib/regina/aros_funcs/: __regina_faked_main.c  isreginamsg.c  regina_intern.h  reginaversion.c  rexxaddmacro.c  rexxaddqueue.c  rexxallocatememory.c  rexxclearmacrospace.c  rexxcreatequeue.c  rexxdeletequeue.c  rexxderegisterexit.c  rexxderegisterfunction.c  rexxderegistersubcom.c  rexxdropmacro.c  rexxfreememory.c  rexxloadmacrospace.c  rexxpullqueue.c  rexxqueryexit.c  rexxqueryfunction.c  rexxquerymacro.c  rexxqueryqueue.c  rexxquerysubcom.c  rexxregisterexitdll.c  rexxregisterexitexe.c  rexxregisterfunctiondll.c  rexxstart.c  (+7 more)
(+22053 files in other folders)
